[package]
name = "rusty_hogs"
version = "0.4.4"
authors = ["Scott Cutler <scutler@newrelic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "secret_scanning"
path = "src/lib.rs"

[dependencies]
git2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "^1"
clap = "2"
regex = "1"
url = "2"
tempdir = "0.3"
base64 = "0.11.0"
log = "^0.4"
simple_logger = "^1"
simple-error = "0.2"
chrono = "0.4"
encoding = "0.2"
hex = "0.4"
lambda_runtime = "0.2"
rust-s3 = "0.18.3"
google-drive3 = "*"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
yup-oauth2 = "^1.0"
