[package]
name = "rusty_hogs"
version = "1.0.4"
authors = ["Scott Cutler <scutler@newrelic.com>"]
edition = "2018"
description = "This project provides a set of scanners that will use regular expressions to try and detect the presence of sensitive information such as API keys, passwords, and personal information. It includes a set of regular expressions by default, but will also accept a JSON object containing your custom regular expressions."
homepage = "https://github.com/newrelic/rusty-hog"
keywords = ["secret", "scanner", "regex", "rusty", "hog"]
categories = ["command-line-utilities", "development-tools::build-utils", "filesystem"]
readme = "README.md"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_hogs"
path = "src/lib.rs"

[dependencies]
git2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "^1"
clap = "2"
regex = "1"
url = "2"
tempdir = "0.3"
base64 = "0.11.0"
log = "^0.4"
simple_logger = "^1"
simple-error = "0.2"
chrono = "0.4"
encoding = "0.2"
hex = "0.4"
lambda_runtime = "0.2"
rust-s3 = "0.18.5"
google-drive3 = "1.0.12"
# This project intentionally uses an old version of Hyper. See
# https://github.com/Byron/google-apis-rs/issues/173 for more
# information.
hyper = "^0.10"
hyper-rustls = "^0.6"
yup-oauth2 = "^1.0"
walkdir = "2"
zip = "0.5"
tar = "0.4.26"
flate2 = "1.0.14"
anyhow = "1.0"
